# raspisator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
benchmark/: CMakeLists.txt
benchmark/linear/: CSCMatrixConstructor.cpp  LU.cpp  SparseLU.cpp
cmake/: load_libraries.cmake
playground/: CMakeLists.txt  afiro.cpp  lup_error_measurement.cpp  magic_square.cpp  main.cpp  milp_encoding.cpp  mps_to_numpy.cpp  simplex_core_dump_0.h  simplex_iterations_depending_on_c.cpp  test_problems.cpp
playground/setcover/: Evaluator.h  Greedy.h  Reader.h  Types.h  setcover.cpp
resources/: README.md  adlittle.mps  afiro.mps  blend.mps  simple.mps
src/: CMakeLists.txt
src/encoding/: UniformTimeDiscretization.h
src/linear/: BigInteger.h  BoundedSimplexMethod.h  BranchAndBound.h  CheckBFS.h  FieldTraits.h  MPS.h  Matrix.h  RowBasis.h  Scaler.h  SimplexMethod.h  SimplexMethodStable.h  Solution.h
src/linear/bb/: Accountant.h  BaseAccountant.h  BranchAndBound.h  BranchAndBoundTree.h  Drawer.h  FullStrongBranching.h  NodeRelativeLocation.h  PseudoCost.h  Settings.h  TreeStoringAccountant.h
src/linear/builder/: Constraint.h  Expression.h  ProblemBuilder.h  Variable.h  fwd.h
src/linear/matrix/: Elimination.h  LU.h  Matrix.h  NPY.h  Norms.h  Random.h  Rank.h  RowBasis.h  Types.h
src/linear/model/: Bound.h  LP.h  MILP.h
src/linear/problem/: MILPProblem.h  MPS.h  ToMatrices.h  VariableType.h
src/linear/problem/grammar/: Constraint.h  Expression.h  Variable.h  fwd.h
src/linear/problem/optimization/: BaseOptimizer.h  FullOptimizer.h  ObjectivePerturbation.h  RemoveConstantAndUnusedVariables.h  RemoveConstantConstraints.h  RemoveConstantVariables.h  RemoveLinearlyDependentConstraints.h  RemoveOneVariableConstraints.h  RemoveOneVariableEqualities.h  RemoveTrivialInequalities.h  Scaling.h  StrictenBounds.h  Substitution.h  TransformToEqualities.h
src/linear/scheduling/: BlomersHeuristic.h  UniformTimeDiscretization.h
src/linear/simplex/: Accountant.h  BaseAccountant.h  BoundedSimplexMethod.h  CyclingDetector.h  Dual.h  Primal.h  Settings.h  Simplex.h  SimplexCoreDump.h  SimplexMethod.h  Types.h
src/linear/sparse/: CSCMatrix.h  EtaFile.h  LU.h  Norms.h  Permutation.h  SCC.h
src/model/: README.md  STN.h  Solution.h  State.h  Task.h  Unit.h
src/problems/: Blomer.h  Dwarf.h
src/utils/: Accumulators.h  Drawing.cpp  Drawing.h  GraphvizDrawer.h  Hashers.h  Logging.h  Paths.h  ShadowFloat.h  String.h  Variant.h
tests/: Assertions.h  BigIntegerTests.cpp  BoundsTests.cpp  BranchAndBoundTests.cpp  CMakeLists.txt  DegenerateSimplexMethodTests.cpp  LUTests.cpp  MatrixTests.cpp  NumericalStabilityTests.cpp  ProblemBuilderTests.cpp  RowBasisTests.cpp  SimplexMethodTests.cpp  SolutionCheckingTests.cpp
tests/LU/: CommonTests.cpp  DenseLUTests.cpp  EtaFileTests.cpp  SparseLUTests.cpp  TestMatrices.h
tests/accumulators/: ArgMaxTests.cpp  ArgMinTests.cpp  ArithmeticMeanTests.cpp
tests/feature/: FullProblemSolvingTests.cpp
tests/simplex/: Assertions.h  BigTests.cpp  RandomTests.cpp  SmallTests.cpp  UnboundedSimplexTests.cpp  simplex_core_dump_1.h  simplex_core_dump_2.h  simplex_core_dump_4.h  simplex_core_dump_5.h
